<?xml version="1.0"?>
<package>
    <name>esiaf_ros</name>
    <version>0.0.1</version>
    <description>esiaf (Enhanced Sound Integration And Framework, pronounced easy a f) is a library to exchange audio signals between several applications over ros</description>

    <maintainer email="rfeldh@gmail.com">Robert Feldhans</maintainer>
    <license>---none---</license>
    <author>rfeldhans</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>audio_common_msgs</build_depend>
    <build_depend>audio_capture</build_depend>
    <build_depend>audio_play</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>package</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>audio_common_msgs</run_depend>
    <run_depend>audio_capture</run_depend>
    <run_depend>audio_play</run_depend>

</package>
